<resources>
    <string name="app_name">ProyectoB_PMDM_T2_Devesh_Hanumante</string>
    <string name="tv_buscador">Buscador de Museos de La Comunidad de Madrid</string>
    <string name="btn_filtro">Seleccionar filtro</string>
    <string name="btn_consultar">Consultar Listado</string>
    <string name="tv_filtro_sel">Filtro Seleccionado</string>
    <string name="it_listado">Listado</string>
    <string name="it_mapa">Mapa</string>
    <string name="selected_filter">Filtro: %s</string>
    <string name="all_museums">Mostrando todos los museos</string>
    <string name="btn_map">Consultar mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_Area">Area</string>
    <string name="tv_district">Distrito</string>
    <string name="tv_museum">Nombre del museo</string>
    <string name="tv_Address">direccion del museo</string>
    <string name="tv_desc">informacion del museo</string>
    <string name="tv_schedule">horario del museo</string>
    <string name="btn_consultar_mapa">Consultar Mapa</string>
</resources>