<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/global_padding"
    tools:context=".MuseumDetailed">

    <TextView
        android:id="@+id/tv_museum_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_museum"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tv_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_district"
        android:layout_marginTop="@dimen/global_padding"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_name">

    </TextView>

    <TextView
        android:id="@+id/tv_museum_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_Area"
        android:layout_marginTop="@dimen/global_padding"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_district">

    </TextView>

    <TextView
        android:id="@+id/tv_museum_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_Address"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_area"
        android:layout_marginTop="@dimen/global_padding">

    </TextView>

    <TextView
        android:id="@+id/tv_museum_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_desc"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_address"
        android:layout_marginTop="@dimen/global_padding">

    </TextView>

    <TextView
        android:id="@+id/tv_shcedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_schedule"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_museum_info"
        android:layout_marginTop="@dimen/global_padding">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>