<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/global_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_buscador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/tv_buscador">
    </TextView>

    <Button
        android:id="@+id/btn_filtrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_buscador"
        android:text="@string/btn_filtro">
    </Button>

    <TextView
        android:id="@+id/tv_filtro_sel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_filtro_sel"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/btn_filtrar">
    </TextView>

    <FrameLayout
        android:id="@+id/fl_filtro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@+id/tv_filtro_sel">
    </FrameLayout>

    <Button
        android:id="@+id/btn_consultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_consultar">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>